<resources>
    <string name="app_name">GoingRogueDesign</string>
    <string name="title_home">Home</string>
    <string name="title_calculator">Calculator</string>
    <string name="title_projects">Projects</string>
    <string name="title_drawings">Drawings</string>
    <string name="title_account">Account</string>
    <string name="home_intro">
        Whether you\'re working on a Residential or Commercial project, GoingRogue Design can provide you with excellent Interior and Exterior Design, Purchasing, Budgeting and Project Management from idea conception through to final construction.
    </string>
    <string-array name="service_titles">
        <item>Interior Design</item>
        <item>Exterior Design</item>
        <item>Conceptual Design</item>
        <item>Purchasing</item>
        <item>Project Management</item>
        <item>Owner Representative</item>
    </string-array>
    <string-array name="interior_design_services">
        <item>Professional Drawings</item>
        <item>Color Selection</item>
        <item>Finish Selection</item>
        <item>Fixture Selection</item>
        <item>Furniture Selection</item>
    </string-array>
    <string-array name="exterior_design_services">
        <item>Professional Drawings</item>
        <item>Color Selection</item>
        <item>Material Selection</item>
    </string-array>
    <string-array name="conceptual_design_services">
        <item>Hand Drawings</item>
        <item>Renderings</item>
        <item>Color Boards</item>
        <item>Dream Boards</item>
        <item>Building Models</item>
    </string-array>
    <string-array name="purchasing_services">
        <item>Purchasing of Furniture and Finishes</item>
        <item>Coordinating Install</item>
        <item>Vendor Coordination</item>
    </string-array>
    <string-array name="project_management_services">
        <item>Assisting in General Contractor and Sub-Contractor Selection</item>
        <item>Budgeting</item>
    </string-array>
    <string-array name="owner_representative_services">
        <item>Coordinating Meetings, Emails, Communication, Payments and anything else you may need!</item>
        <item>Working with Many Hotel Brands</item>
    </string-array>
    <string-array name="state_arrays">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
        <item>Puerto Rico</item>
        <item>Virgin Islands</item>
        <item>Northern Mariana Islands</item>
        <item>Guam</item>
        <item>American Samoa</item>
        <item>Palau</item>
    </string-array>
    <string-array name="contractor_type_arrays">
        <item>type 1</item>
        <item>type 2</item>
        <item>type 3</item>
        <item>type 4</item>
        <item>type 5</item>

    </string-array>
    <string name="title_activity_project_detail">ProjectDetailActivity</string>
    <string name="tab_text_0">Drawing</string>
    <string name="tab_text_1">Document</string>
    <string name="tab_text_2">Calendar</string>
    <string name="tab_text_3">Invoice</string>
    <string name="tab_text_4">Task</string>
    <string name="tab_text_5">Note</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="random_hotel_names">
        <item>	Moody Moon	</item>
        <item>	Mandarin Oriental	</item>
        <item>	Four Seasons Hotel	</item>
        <item>	Knights Inn	</item>
        <item>	Radisson Hotel	</item>
        <item>	Classio Hotel	</item>
        <item>	The Bay Club	</item>
        <item>	Travelodge	</item>
        <item>	Jack Summer Inn	</item>
        <item>	Hotel Grizzly	</item>
        <item>	Twice Happy Resorts	</item>
        <item>	Hotel Agoura	</item>
        <item>	Hotel Crossroads	</item>
        <item>	Grand Hotel	</item>
        <item>	The Bristol Hotel	</item>
        <item>	Hollywood Sands	</item>
        <item>	The Gourmet Resorts	</item>
        <item>	Cotton House Hotel	</item>
        <item>	The Watson Hotel	</item>
        <item>	Pacifica Hotel	</item>
        <item>	Hotel Barry Love	</item>
        <item>	Cosmopolitan Hotel	</item>
        <item>	White Dove Hotels	</item>
        <item>	Reefs Resort Club	</item>
        <item>	Beachwalk Resort	</item>
        <item>	Fountain Fun	</item>
        <item>	Hotel Vitale	</item>
        <item>	Cable Car Hotel	</item>
        <item>	The Mosser Hotel	</item>
        <item>	Redstone	</item>
        <item>	Hotel Vitale	</item>
        <item>	Land’s End Resort	</item>
        <item>	Manchester Grand Hyatt	</item>
        <item>	Palace Hotel	</item>
        <item>	Paradise Point Resort	</item>
        <item>	Kemp Mill	</item>
    </string-array>
    <string-array name="random_first_names">
        <item>	Theodore	</item>
        <item>	Quentin	</item>
        <item>	Eliezer	</item>
        <item>	Howard	</item>
        <item>	Kamron	</item>
        <item>	Jasiah	</item>
        <item>	Rylan	</item>
        <item>	Samuel	</item>
        <item>	Dane	</item>
        <item>	Dominick	</item>
        <item>	Jaylon	</item>
        <item>	Rhett	</item>
        <item>	Zackary	</item>
        <item>	Jovanny	</item>
        <item>	Semaj	</item>
        <item>	Spencer	</item>
        <item>	Douglas	</item>
        <item>	Julian	</item>
        <item>	Zaire	</item>
        <item>	Arnav	</item>
        <item>	Frank	</item>
        <item>	Cash	</item>
        <item>	Cullen	</item>
        <item>	Reilly	</item>
        <item>	Javon	</item>
        <item>	Peter	</item>
        <item>	Oswaldo	</item>
        <item>	Joey	</item>
        <item>	Joshua	</item>
        <item>	Denzel	</item>
        <item>	Keegan	</item>
        <item>	Tripp	</item>
        <item>	Skyler	</item>
        <item>	Elias	</item>
        <item>	Christian	</item>
        <item>	Izaiah	</item>
        <item>	Immanuel	</item>
        <item>	Pierce	</item>
        <item>	Jabari	</item>
        <item>	Ahmed	</item>
        <item>	Adan	</item>
        <item>	Nico	</item>
        <item>	Jaidyn	</item>
        <item>	Jesus	</item>
        <item>	Jefferson	</item>
        <item>	Kingston	</item>
        <item>	Erick	</item>
        <item>	Xander	</item>
        <item>	Beau	</item>
        <item>	Jair	</item>
        <item>	Callum	</item>
        <item>	Armani	</item>
        <item>	Ahmad	</item>
        <item>	Braxton	</item>
        <item>	Blaine	</item>
        <item>	Jairo	</item>
        <item>	Esteban	</item>
        <item>	Bronson	</item>
        <item>	Miguel	</item>
        <item>	Chance	</item>
        <item>	Javion	</item>
        <item>	Slade	</item>
        <item>	Cannon	</item>
        <item>	Davis	</item>
        <item>	Demarcus	</item>
        <item>	Blaze	</item>
        <item>	Darnell	</item>
        <item>	Zane	</item>
        <item>	Max	</item>
        <item>	Adolfo	</item>
        <item>	Deon	</item>
        <item>	Marcus	</item>
        <item>	Sincere	</item>
        <item>	Antony	</item>
        <item>	Augustus	</item>
        <item>	Brycen	</item>
        <item>	Caiden	</item>
        <item>	Mario	</item>
        <item>	Jamal	</item>
        <item>	Larry	</item>
        <item>	Brooks	</item>
        <item>	Joseph	</item>
        <item>	Uriah	</item>
        <item>	Landen	</item>
        <item>	Elliot	</item>
        <item>	Mike	</item>
        <item>	Dillon	</item>
        <item>	Roy	</item>
        <item>	Lane	</item>
        <item>	Franco	</item>
        <item>	Matthew	</item>
        <item>	Elijah	</item>
        <item>	Myles	</item>
        <item>	Shamar	</item>
        <item>	Jagger	</item>
        <item>	Malaki	</item>
        <item>	Kyson	</item>
        <item>	Brayan	</item>
        <item>	Gustavo	</item>
        <item>	Terrence	</item>
    </string-array>
</resources>